# hyperliquid

./: .env.example  .gitignore  ARCHITECTURE_DIAGRAM.md  AUTONOMOUS_IMPLEMENTATION_SUMMARY.md  Cargo.toml  ENHANCEMENTS.md  HJB_IMPLEMENTATION_SUMMARY.md  HOT_RELOAD_SETUP.md  HYBRID_VOLATILITY_MODEL.md  IMPLEMENTATION_SUMMARY.md  LIVE_TUNING_IMPLEMENTATION.md  MARKET_MAKER_V2_README.md  MARKET_ORDER_UPDATE.md  MULTI_LEVEL_README.md  MULTI_OBJECTIVE_TUNING_IMPLEMENTATION.md  ORDER_IMPROVEMENTS.md  QUICKSTART_SKEWING.md  README.md  REFACTORING_TODO.md  STATE_CONTROL_FRAMEWORK.md  STATE_VECTOR_QUICK_REF.md  TUNING_PARAMS_README.md  VOLATILITY_MODEL_IMPROVEMENTS.md  config.example.json  config.json  tuning_params.example.json  tuning_params.json  tuning_params_final.json
docs/: AUTO_TUNING_GUIDE.md  HJB_V2_MIGRATION_GUIDE.md  INTEGRATION_STATUS.md  INTELLIGENT_ORDER_CHURN_GUIDE.md  MODULAR_ARCHITECTURE.md  ORDER_PLACEMENT_FIX.md
documentation/: ADAM_OPTIMIZER_README.md  AUTONOMOUS_TUNING_GUIDE.md  CONTROL_VECTOR.md  DYNAMIC_SPREAD_IMPLEMENTATION.md  HJB_FRAMEWORK.md  INTEGRATION_SUMMARY.md  INVENTORY_SKEWING.md  LATENCY_OPTIMIZATIONS.md  LIVE_TUNING_GUIDE.md  MULTI_LEVEL_INTEGRATION_GUIDE.md  ONLINE_ADVERSE_SELECTION.md  ONLINE_ADVERSE_SELECTION_QUICKREF.md  ONLINE_ADVERSE_SELECTION_SUMMARY.md  PARTICLE_FILTER_CHANGELOG.md  PARTICLE_FILTER_INTEGRATION.md  PARTICLE_FILTER_QUICK_START.md  PROJECT_OVERVIEW.md  STATE_VECTOR.md  STEP_7_COMPLETION_SUMMARY.md  STOCHASTIC_VOLATILITY_IMPLEMENTATION_SUMMARY.md  STOCHASTIC_VOLATILITY_INTEGRATION.md  STOCHASTIC_VOLATILITY_QUICKREF.md  TUNING_PARAMS_README.md  TUNING_QUICK_REF.md
examples/: config_auto_tuning_example.json  config_hjb_v2.example.json  config_volatility_models_example.json  hjb_demo.rs  market_maker_v2_with_tuning.rs  multi_level_config.example.json  multi_level_demo_template.rs  order_book_analysis.rs  order_pool_usage.rs  rate_limiter_usage.rs  state_vector_demo.rs  tick_lot_size_demo.rs  tuning_params.example.json
src/: errors.rs  hawkes_multi_level.rs  helpers.rs  inventory_skew.rs  ipc.rs  lib.rs  market_maker.rs  market_maker_v2.rs  order_state.rs  rate_limiter.rs  robust_hjb_control.rs  state_vector_tests.rs  stochastic_volatility.rs  strategy.rs  tick_lot_size.rs
src/exchange/: cancel.rs  exchange_client.rs  fast_order_sender.rs  mod.rs  modify.rs  order.rs  order_pool.rs  parallel_order_executor.rs
src/info/: info_client.rs
src/strategies/: async_tuner_actor.rs  hjb_strategy.rs  hjb_strategy_v2.rs  mod.rs  tuner_integration.rs
src/strategies/components/: adverse_selection.rs  book_analyzer.rs  event_bus.rs  ewma_vol.rs  fill_model.rs  hawkes_fill_model.rs  hjb_multi_level_optimizer.rs  hybrid_vol.rs  inventory_markout.rs  inventory_skew.rs  inventory_skew_impl.rs  market_data_pipeline.rs  microprice_as.rs  (+17 more)
src/tui/: dashboard.rs  mod.rs  state.rs
src/ws/: lock_free_ws_manager.rs  message_processor.rs  message_types.rs  mod.rs
(+8 files in other folders)
