[package]
name = "hyperliquid_rust_sdk"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "Rust SDK for Hyperliquid"
homepage = "https://hyperliquid.xyz/"
readme = "README.md"
documentation = "https://github.com/hyperliquid-dex/hyperliquid-rust-sdk"
repository = "https://github.com/hyperliquid-dex/hyperliquid-rust-sdk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { version = "1.0", default-features = false, features = [
  "dyn-abi",
  "sol-types",
  "signer-local",
] }
chrono = { version = "0.4.26", features = ["serde"] }
env_logger = "0.11.8"
futures = "0.3.28"  # For parallel execution utilities
futures-util = "0.3.28"
lazy_static = "1.0"
log = "0.4.19"
reqwest = "0.12.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20.0", features = ["native-tls"] }
uuid = { version = "1.0", features = ["v4"] }
dotenv = "0.15.0"
rand = "0.8"
rand_distr = "0.4"
statrs = "0.17"
approx = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
tracing-log = "0.2"
tracing-appender = "0.2"
time = { version = "0.3", features = ["formatting", "macros"] }
parking_lot = "0.12"  # Faster RwLock implementation
bytes = "1.0"  # Zero-copy buffer management for HFT optimizations
crossbeam = "0.8"  # Lock-free data structures for HFT
flume = "0.11"  # Faster than tokio::mpsc for message passing
colored = "3.0.0"
